tests/negative/gold/lock_sdk_empty/lock-sdk-empty-test.gold
<...>/tests/negative/lock_sdk_empty/package.lock:1:5: error: Invalid empty SDK constraint
sdk:
    ^
Compilation failed.
